Add base project structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-aiogram = "^2.19"
+aiogram = "^3.0.0b2"
+pydantic = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
 pylint = "^2.12.2"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
