Add missing checkout step in build job

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -101,6 +101,9 @@ jobs:
     needs: [lint, test]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Build Docker image
         run: |
           DOCKER_BUILDKIT=1 docker build .
