--- a/.github/workflows/deploying.yml
+++ b/.github/workflows/deploying.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build:
-    name: Build${{ env.push && ' and publish ' || ' ' }}Docker image
+    name: Build${{ github.event_name == 'push' && ' and publish ' || ' ' }}Docker image
     needs: [lint, test]
     runs-on: ubuntu-latest
     permissions:
@@ -41,11 +41,11 @@ jobs:
         with:
           images: ${{ env.registry }}/${{ env.image }}
 
-      - name: Build${{ env.push && ' and publish ' || ' ' }}Docker image
+      - name: Build${{ github.event_name == 'push' && ' and publish ' || ' ' }}Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: ${{ env.push }}
+          push: ${{ github.event_name == 'push' }}
           tags: ${{ id.extract-docker-metadata.outputs.tags }}
           labels: ${{ id.extract-docker-metadata.outputs.labels }}
 
