--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ on:
 
 env:
   python-version: 3.10.2
+  cosign-version: 1.5.2
 
 permissions:
   contents: read
@@ -104,7 +105,7 @@ jobs:
           poetry run pytest --cov=speny --cov=tests
 
   build:
-    name: Build${{ github.event_name == 'push' && ' and publish ' || ' ' }}Docker image
+    name: Build${{ github.event_name != 'pull_request' && ' ' || ' and publish ' }}Docker image
     needs: [lint, test]
     runs-on: ubuntu-latest
     permissions:
@@ -116,7 +117,13 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login against registry ${{ env.registry }}
+      - name: Setup cosign
+        if: github.event_name != 'pull_request'
+        uses: sigstore/cosign-installer@v2.0.0
+        with:
+          cosign-release: v${{ env.cosign-version }}
+
+      - name: Login against ${{ env.registry }} registry
         uses: docker/login-action@v1
         with:
           registry: ${{ env.registry }}
@@ -129,10 +136,18 @@ jobs:
         with:
           images: ${{ env.registry }}/${{ env.image }}
 
-      - name: Build${{ github.event_name == 'push' && ' and publish ' || ' ' }}Docker image
+      - name: Build${{ github.event_name != 'pull_request' && ' ' || ' and push ' }}Docker image
+        id: build-and-push
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: ${{ github.event_name == 'push' }}
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.extract-docker-metadata.outputs.tags }}
           labels: ${{ steps.extract-docker-metadata.outputs.labels }}
+
+      - name: Sign published Docker image
+        if: ${{ github.event_name != 'pull_request' }}
+        env:
+          COSIGN_EXPERIMENTAL: 1
+        run: |
+          cosign sign ${{ steps.extract-docker-metadata.outputs.tags }}
