--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,14 @@
 name: CI/CD
 
 on:
-  schedule:
-    - cron: 0 12 * * 0
-
   push:
     branches: [main]
-    tags: [v*.*.*]
 
   pull_request:
     branches: [main]
 
 env:
   python_version: 3.10.2
-
-  registry: ghcr.io
-  image_name: ${{ github.repository }}
 
 permissions:
   contents: read
@@ -68,35 +61,14 @@ jobs:
           poetry run pytest --cov=speny --cov=tests
 
   build:
-    name: Build${{ github.event_name != 'pull_request' && ' ' || ' and publish ' }}Docker image
+    name: Build Docker image
     needs: [test-lint]
     runs-on: ubuntu-latest
     permissions:
       packages: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login against ${{ env.registry }} registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.registry }}
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
-
-      - name: Extract Docker metadata
-        id: extract-docker-metadata
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ env.registry }}/${{ env.image_name }}
-
-      - name: Build${{ github.event_name != 'pull_request' && ' ' || ' and push ' }}Docker image
+      - name: Build Docker image
         uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.extract-docker-metadata.outputs.tags }}
-          labels: ${{ steps.extract-docker-metadata.outputs.labels }}
