--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,50 @@ permissions:
   contents: read
 
 jobs:
-  test-lint:
-    name: Run tests and linters
+  lint:
+    name: Run lints
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.python_version }}
+
+      - name: Restore cached Poetry installation
+        uses: actions/cache@v2
+        with:
+          path: ~/.local
+          key: ${{ runner.os }}-poetry
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Restore cached Poetry virtualenv
+        id: restore-cached-poetry-virtualenv
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: ${{ runner.os }}-${{ env.python-version }}-virtualenv-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ${{ runner.os }}-${{ env.python-version }}-virtualenv-
+
+      - name: Install dependencies
+        if: steps.restore-cached-poetry-virtualenv.outputs.cache-hit != 'true'
+        working-directory: ${{ env.working-directory }}
+        run: |
+          poetry install --no-interaction
+
+      - name: Run Pylint
+        run: |
+          poetry run pylint --fail-under 9 speny tests
+
+  test:
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -52,20 +94,13 @@ jobs:
         run: |
           poetry install --no-interaction
 
-      - name: Run Pylint
-        run: |
-          poetry run pylint --fail-under 9 speny tests
-
       - name: Run pytest
         run: |
           poetry run pytest --cov=speny --cov=tests
 
   build:
-    name: Build Docker image
-    needs: [test-lint]
+    name: Run builds
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
     steps:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
