--- a/.github/workflows/deploying.yml
+++ b/.github/workflows/deploying.yml
@@ -17,6 +17,7 @@ jobs:
         uses: google-github-actions/auth@v0
         with:
           credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          create_credentials_file: false
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
