--- a/.github/workflows/deploying.yml
+++ b/.github/workflows/deploying.yml
@@ -11,7 +11,9 @@ jobs:
   deploy:
     name: Deploy to production
     runs-on: ubuntu-latest
-    environment: production
+    environment:
+      name: production
+      url: https://t.me/spenybot
     steps:
       - name: Authenticate to Google Cloud Platform
         uses: google-github-actions/auth@v0
