--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ pytest-mock = "^3.7.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pylint.'MASTER']
+extension-pkg-whitelist = "pydantic"
