--- a/.github/workflows/deploying.yml
+++ b/.github/workflows/deploying.yml
@@ -14,33 +14,25 @@ jobs:
     environment:
       name: production
       url: https://t.me/spenybot
+    env:
+      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
     steps:
-      - name: Authenticate to Google Cloud Platform
-        uses: google-github-actions/auth@v0
-        with:
-          credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Configure Docker
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.IMAGE_NAME }}
-          username: _json_key
-          password: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+      - name: Authenticate to Heroku Container Registry
+        run: |
+          heroku container:login
 
-      - name: Build and push Docker image
+      - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
-          push: true
-          tags: ${{ secrets.IMAGE_NAME }}
+          tags: speny
+
+      - name: Push Docker image
+        run: |
+          heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} speny
 
       - name: Deploy Docker image
-        uses: google-github-actions/deploy-cloudrun@v0
-        with:
-          service: ${{ secrets.CLOUD_RUN_SERVICE }}
-          image: ${{ secrets.IMAGE_NAME }}
-          region: ${{ secrets.CLOUD_RUN_REGION }}
-          secrets: |
-            BOT_TOKEN=${{ secrets.BOT_TOKEN }}
+        run: |
+          heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} speny
