--- a/.github/workflows/deploying.yml
+++ b/.github/workflows/deploying.yml
@@ -35,4 +35,4 @@ jobs:
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         run: |
-          heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} ${{ secrets.HEROKU_IMAGE_NAME }}
+          heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
