--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,11 +7,8 @@ on:
   pull_request:
     branches: [main]
 
-  schedule:
-    - cron: '0 12 * * 0'
-
 env:
-  python_version: 3.10.2
+  python_version: 3.10.4
 
 permissions:
   contents: read
@@ -21,16 +18,16 @@ jobs:
     name: Run lints
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ env.python_version }}
 
       - name: Restore cached Poetry installation
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.local
           key: ${{ runner.os }}-poetry
@@ -41,16 +38,17 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
 
-      - name: Restore cached Poetry virtualenv
-        id: restore-cached-poetry-virtualenv
-        uses: actions/cache@v2
+      - name: Restore cached Poetry virtual environment
+        id: restore-cached-poetry-virtual-environment
+        uses: actions/cache@v3
         with:
+
           path: .venv
-          key: ${{ runner.os }}-${{ env.python-version }}-virtualenv-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: ${{ runner.os }}-${{ env.python-version }}-virtualenv-
+          key: ${{ runner.os }}-${{ env.python-version }}-virtual-environment-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ${{ runner.os }}-${{ env.python-version }}-virtual-environment-
 
       - name: Install dependencies
-        if: steps.restore-cached-poetry-virtualenv.outputs.cache-hit != 'true'
+        if: steps.restore-cached-poetry-virtual-environment.outputs.cache-hit != 'true'
         working-directory: ${{ env.working-directory }}
         run: |
           poetry install --no-interaction
@@ -63,16 +61,16 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ env.python_version }}
 
-      - name: Restore cached poetry installation
-        uses: actions/cache@v2
+      - name: Restore cached Poetry installation
+        uses: actions/cache@v3
         with:
           path: ~/.local
           key: ${{ runner.os }}-poetry
@@ -83,16 +81,16 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
 
-      - name: Restore cached Poetry virtualenv
-        id: restore-cached-poetry-virtualenv
-        uses: actions/cache@v2
+      - name: Restore cached Poetry virtual environment
+        id: restore-cached-poetry-virtual-environment
+        uses: actions/cache@v3
         with:
           path: .venv
-          key: ${{ runner.os }}-${{ env.python-version }}-virtualenv-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: ${{ runner.os }}-${{ env.python-version }}-virtualenv-
+          key: ${{ runner.os }}-${{ env.python-version }}-virtual-environment-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ${{ runner.os }}-${{ env.python-version }}-virtual-environment-
 
       - name: Install dependencies
-        if: steps.restore-cached-poetry-virtualenv.outputs.cache-hit != 'true'
+        if: steps.restore-cached-poetry-virtual-environment.outputs.cache-hit != 'true'
         working-directory: ${{ env.working-directory }}
         run: |
           poetry install --no-interaction
@@ -101,35 +99,35 @@ jobs:
         run: |
           poetry run pytest --cov=speny --cov=tests --cov-report=xml
 
-      - name: Upload coverage
-        uses: codecov/codecov-action@v2
+      - name: Upload coverage on Codecov
+        uses: codecov/codecov-action@v3
 
-  analyse:
+  analyze:
     name: Run analyses
     runs-on: ubuntu-latest
     permissions:
       security-events: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Check out repository
+        uses: actions/checkout@v3
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v1
+        uses: github/codeql-action/init@v2
         with:
           languages: python
 
       - name: Build CodeQL
-        uses: github/codeql-action/autobuild@v1
+        uses: github/codeql-action/autobuild@v2
 
       - name: Run CodeQL analysis
-        uses: github/codeql-action/analyze@v1
+        uses: github/codeql-action/analyze@v2
 
   build:
     name: Run builds
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
