--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,14 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-aiogram = "^3.0.0b2"
+aiogram = "3.0.0.b2"
 pydantic = "^1.9.0"
+Babel = "^2.9.1"
+google-api-python-client = "^2.38.0"
+google-auth = "^2.6.0"
+google-auth-oauthlib = "^0.5.0"
+google-auth-httplib2 = "^0.1.0"
+loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
