--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ google-auth-httplib2 = "^0.1.0"
 loguru = "^0.6.0"
 
 [tool.poetry.group.dev.dependencies]
+black = "^23.1a1"
 ruff = "^0.0"
 
 [tool.poetry.group.test.dependencies]
