--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ loguru = "^0.6.0"
 [tool.poetry.group.dev.dependencies]
 black = "^23.1a1"
 ruff = "^0.0"
+pre-commit = "^2.21.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.0.1"
