Add caching for Docker builds

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,3 +65,6 @@ jobs:
 
       - name: 🔨 Build Docker
         uses: docker/build-push-action@v3
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
