Set repository owner as a reviewer

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,8 @@ updates:
       interval: daily
     commit-message:
       prefix: ⬆️
+    reviewers:
+      - shvixxl
 
   - package-ecosystem: pip
     directory: /
@@ -13,3 +15,5 @@ updates:
       interval: daily
     commit-message:
       prefix: ⬆️
+    reviewers:
+      - shvixxl
