--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,6 @@ repos:
           - --fix
 
   - repo: https://github.com/psf/black
-    rev: 22.12.0
+    rev: 23.1a1
     hooks:
       - id: black
